	  very lightweight).  Now supports open, close, and a new ioctl to recover
	  the builtin filename.  The latter will be needed to support a binfs
	  binfmt.
	* builtin/binfs.c:  Move apps/builtin/binfs.c to fs/binfs/fs_binfs.c
	  CONFIG_APPS_BINDIR rename CONFIG_FS_BINFS
	* apps/include/builtin.h:  Some of the content of
	  apps/include/apps.h moved to include/nuttx/binfmt/builtin.h.
	  apps/include/apps.h renamed builtin.h
	* apps/builtin/exec_builtins.c:  Move builtin
	  utility functions from apps/builtin/exec_builtins.c to
	  binfmt/libbuiltin/libbuiltin_utils.c
	* apps/nshlib/nsh_mountcmds.c:  The block driver/source
	  argument is now optional.  Many files systems do not need
	  a source and it is really stupid to have to enter a bogus
	  source parameter.
	* apps/nshlib/nsh_fileapp.c:  Add the ability to execute a file
	  from a file system using posix_spawn().
	* apps/builtin/: Extensions from Mike Smith.
	* apps/examples/ftpd/Makefile: Name ftpd_start is not the name of
	  the entrypoint.  Should be ftpd_main (from Yan T.)
	* apps/netutils/telnetd/telnetd_driver: Was stuck in a loop if
	  recv[from]() ever returned a value <= 0.
	* apps/examples/nettest and poll:  Complete Kconfig files.
	* apps/examples/ostest/waitpid.c:  Need to use WEXITSTATUS()
	  to decode the correct exit status.
	* apps/system/usbmonitor:  A daemon that can be used to monitor USB
	  trace outpout.
	* apps/nshlib/nsh_usbdev.c, nsh_consolemain.c, nsh_session.c, nsh_script.c:
	  Add support for a login script.  The init.d/rcS script will be executed
	  once when NSH starts; the .nshrc script will be executed for each session:
	  Once for serial, once for each USB connection, once for each Telnet
	  session.
	* apps/system/readline: Correct readline() return value.  Was not
	  any returning special values when end-of-file or read errors
	  occur (it would return an empty string which is not very useful).

6.26 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>