@@ -1863,10 +1863,10 @@ static int ls(httpd_conn *hc)
 #ifndef CONFIG_CUSTOM_STACK
       child = task_create("CGI child", CONFIG_THTTPD_CGI_PRIORITY,
                           CONFIG_THTTPD_CGI_STACKSIZE,
-                          (main_t)ls_child, (const char **)argv);
+                          (main_t)ls_child, (FAR char * const *)argv);
 #else
       child = task_create("CGI child", CONFIG_THTTPD_CGI_PRIORITY,
-                          (main_t)ls_child, (const char **)argv);
+                          (main_t)ls_child, (FAR char * const *)argv);
 #endif
       if (child < 0)
         {
